plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '3.1.1'
}

group = 'dev.bossiq'
version = '1.0.0'

repositories {
    mavenCentral()
}

java {
    toolchain { languageVersion = JavaLanguageVersion.of(17) }
}

application {
    mainClass = 'dev.bossiq.minesweeper.App'
}

javafx {
    version = '17.0.12'
    modules = [ 'javafx.controls', 'javafx.graphics', 'javafx.fxml' ]
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.0'
}

test {
    useJUnitPlatform()
}

jlink {
    addExtraDependencies('javafx')
    options = ['--strip-debug', '--no-header-files', '--no-man-pages', '--compress', '2']
    launcher {
        name = 'minesweeper'
    }
    jpackage {
        // For Windows; on macOS/Linux it will create the right installer type automatically
        installerName = 'MinesweeperSolver'
        appVersion = project.version
        vendor = 'BossIQ'
        // comment out next line if you don’t have a signing setup
        // winConsole = false
    }
}
